--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
     sdk: flutter
   flutter_dotenv: ^5.2.1
   go_router: ^15.1.3
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_lints: ^4.0.0
