--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,10 +14,11 @@ dependencies:
     sdk: flutter
   flutter_dotenv: ^5.2.1
   go_router: ^15.1.3
+  permission_handler: ^12.0.0+1
   image_picker: ^1.1.2
 
 dev_dependencies:
-  flutter_lints: ^4.0.0
+  flutter_lints: ^6.0.0
 
   flutter_test:
     sdk: flutter
