--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,10 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
+  http: ^1.4.0
+  path: any
+  mime: any
+  http_parser: any
   flutter_dotenv: ^5.2.1
   go_router: ^15.1.3
   permission_handler: ^12.0.0+1
