--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,9 +23,23 @@ dependencies:
 
 dev_dependencies:
   flutter_lints: ^6.0.0
-
+  flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.2.19
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logo.png"
+
+flutter_native_splash:
+  color: "#A1D35D"
+  image: assets/images/logo.png
+  android: true
+  ios: true
+
+
 
 flutter:
   uses-material-design: true
