--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   go_router: ^15.1.3
   permission_handler: ^12.0.0+1
   image_picker: ^1.1.2
+  shared_preferences: ^2.2.2
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_lints: ^6.0.0
@@ -38,8 +40,6 @@ flutter_native_splash:
   image: assets/images/logo.png
   android: true
   ios: true
-
-
 
 flutter:
   uses-material-design: true
